# NarrowPassageIdentifier

./: .gitignore  CMakeLists.txt  README.md
include/: Convex.h  Image.h  NarrowFinder.h  Point.h  Renderer.h  TicToc.h  pgm_reader.h
src/: Image.cpp  NarrowCpp.cpp  NarrowFinder.cpp  main.cpp
